<resources>
    <string name="app_name">ArxivReader</string>
    <string name="search_hint">Search Arxiv</string>
    <string name="search_title">Search</string>
    <string name="all_cat">All</string>
    <string name="phy_cat">Physics</string>
    <string name="cs_cat">Computer Science</string>
    <string name="fin_cat">Quantitative Finance</string>
    <string name="maths_cat">Mathematics</string>
    <string name="bio_cat">Quantitative Biology</string>
    <string name="stats_cat">Statistics</string>

    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>

    <string name="error_internet">Please check your internet connection!!</string>
    <string name="error_arxiv">Issues with Arxiv Server,Try again later!!</string>

    <string name="add_fav_msg">Added to your favorites</string>
    <string name="del_fav_msg">Removed from your favorites</string>

    <string name="pref_tab_name">SEARCH PREFERENCES</string>
    <string name="search_tab_name">SEARCH</string>
    <string name="favs_tab_name">FAVORITES</string>

    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="summary">Abstract</string>
    <string name="all">All</string>
    <string name="statistics">Statistics</string>
    <string name="quantitative_biology">Quantitative-Biology</string>
    <string name="computer_science">Computer Science</string>
    <string name="physics">Physics</string>
    <string name="mathematics">Mathematics</string>
    <string name="last_updated_date">Last Updated Date</string>
    <string name="relevance">Relevance</string>

    <string name="search_toolbar_desc">Search Arxiv database</string>
    <string name="pdf_download_desc">Download PDF</string>
    <string name="add_favs_desc">Add to Favorites</string>
    <string name="share_art_desc">Share this E-print link</string>
    <string name="widget_image_desc">Quick Search Arxiv</string>

    <string name="sort_pref">Sort by:</string>
    <string name="cat_pref">Category:</string>
    <string name="sub_pref">Search in:</string>

</resources>
